# GrafikaProgram

./: gradle.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/me/fanjie/grafikaprogram/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Readme.cpp  RendererES3.cpp  bitmap-lib.cpp  gles3jni.cpp  native-lib.cpp
app/src/main/java/me/fanjie/grafikaprogram/core/: GMApp.kt
app/src/main/java/me/fanjie/grafikaprogram/core/coder/: CircularEncoder.java  CircularEncoderBuffer.java  TextureMovieEncoder.java  TextureMovieEncoder2.java  VideoEncoderCore.java
app/src/main/java/me/fanjie/grafikaprogram/core/generate/: Content.java  ContentManager.java  GeneratedMovie.java  MovieEightRects.java  MovieSliders.java  TestGenMp4.kt  VideoTrimer.kt
app/src/main/java/me/fanjie/grafikaprogram/core/player/: MoviePlayer.java  SpeedControlCallback.java
app/src/main/java/me/fanjie/grafikaprogram/ext/: ActivityExt.kt  ActivityMgr.kt  ApiExt.kt  BitmapExt.kt  ByteArrayExt.kt  CommonExt.kt  DateTimeExt.kt  DisplayExt.kt  Ext.kt  FileExt.kt  FragmentExt.kt  ListenerExt.kt  ManagerExt.kt  PreferencesExt.kt  StringExt.kt  ToastExt.kt  ViewExt.kt  Wrappers.kt
app/src/main/java/me/fanjie/grafikaprogram/gles/: EglCore.java  GeneratedTexture.java  GlUtil.java  Readme.kt
app/src/main/java/me/fanjie/grafikaprogram/gles/draw_program/: FlatShadedProgram.java  Texture2dProgram.java
app/src/main/java/me/fanjie/grafikaprogram/gles/draw_program/wrapper/: Drawable2d.java  FullFrameRect.java  Sprite2d.java
app/src/main/java/me/fanjie/grafikaprogram/gles/surface_love_video_code/: EglSurfaceBase.java  OffscreenSurface.java  WindowSurface.java
app/src/main/java/me/fanjie/grafikaprogram/other/: AboutBox.java  AspectFrameLayout.java  CameraUtils.java  MiscUtils.java  ScaledDrawable2d.java  Utils.kt  WorkDialog.java
app/src/main/java/me/fanjie/grafikaprogram/pages/: ChorTestActivity.java  CodecOpenActivity.java  ColorBarActivity.java  ContinuousCaptureActivity.java  DoubleDecodeActivity.java  GlesInfoActivity.java  HardwareScalerActivity.java  LiveCameraActivity.java  MainActivity.java  MultiSurfaceActivity.java  PlayMovieActivity.java  PlayMovieSurfaceActivity.java  ReadPixelsActivity.java  RecordFBOActivity.java  ScheduledSwapActivity.java  SoftInputSurfaceActivity.java  Test2Activity.kt  TestActivity.kt  TestVideoFilterActivity.kt  TextureFromCameraActivity.java  TextureUploadActivity.java  TextureViewCanvasActivity.java  TextureViewGLActivity.java
app/src/main/java/me/fanjie/grafikaprogram/pages/camera_capture/: CameraCaptureActivity.java  CameraSurfaceRenderer.java
app/src/main/java/me/fanjie/grafikaprogram/pages/glesndk/: GL2JNIActivity.kt  GL2JNILib.java  GL2JNIView.java
app/src/main/java/me/fanjie/grafikaprogram/pages/jniutils/: BitmapLib.java  CSBitmapUtils.kt  JNIUtilsActivity.kt
app/src/main/java/me/fanjie/grafikaprogram/pages/trim_video/: CSVideoSurfaceView.kt  EditMaterialContract.kt  EditMaterialPresenter.kt  MatrixScaleProgram.kt  SurfaceVideoEditPlayer.kt  TrimVideoActivity.kt
app/src/main/res/layout/: activity_camera_capture.xml  activity_continuous_capture.xml  activity_jniutils.xml  activity_play_movie_surface.xml  activity_test.xml  activity_test2.xml  activity_test_video_filter.xml  activity_trim_video.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/me/fanjie/grafikaprogram/: ExampleUnitTest.kt
csffmpeg/: CMakeLists.txt  build.gradle
csffmpeg/src/main/: AndroidManifest.xml
csffmpeg/src/main/cpp/: block_queue.cpp  codec.c  codec.h  com_xfast_ffmpegdemo_FFMpegTransformer.cpp  com_xfast_ffmpegdemo_FFMpegTransformer.h  log.h  lz_codec.c  main.c  main.h  player.c  waitqueue.c
csffmpeg/src/main/cpp/ffmpeg_cmd/: cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c  ffmpeg_opt.c
csffmpeg/src/main/java/com/xfast/ffmpegdemo/: FFMpegEntry.java  FFMpegTransformer.java
csffmpeg/src/main/jniLibs/include/: config.h
gradle/wrapper/: gradle-wrapper.properties
testvireo/: build.gradle
testvireo/src/androidTest/java/me/fanjie/testvireo/: ExampleInstrumentedTest.kt
testvireo/src/main/: AndroidManifest.xml
testvireo/src/main/java/me/fanjie/testvireo/: MainActivity.kt
testvireo/src/main/res/layout/: activity_main.xml  content_main.xml
testvireo/src/main/res/menu/: menu_main.xml
testvireo/src/main/res/values/: strings.xml
testvireo/src/test/java/me/fanjie/testvireo/: ExampleUnitTest.kt
